--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "hello.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node hekko.js"
+    "start": "node hello.js"
   },
   "repository": {
     "type": "git",
